[package]
name = "titorelli_rs"
authors = ["Yury Chebotaev <yury.79120345101@gmail.com>"]
license = ""
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
rust-stemmers = "1.2.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
unicode-segmentation = "1.11.0"

[[bin]]
name="titorelli_rs"
path="src/main.rs"
